2014-01-03  Gavin Barraclough  <barraclough@apple.com>

        Simplify process suppression state calculation
        https://bugs.webkit.org/show_bug.cgi?id=126473

        Reviewed by Geoffrey Garen & Sam Weinig.

        Don't check the application occlusion state (this is covered by the pages already),
        and let the page check visually idle. Remove layers of functions.

        * UIProcess/Network/NetworkProcessProxy.cpp:
        (WebKit::NetworkProcessProxy::didFinishLaunching):
            - Let the network process nap if all processes in its context are napping.*
              (* Except not really. We currently leak a boost onto the process anyway.)
        * UIProcess/Plugins/PluginProcessProxy.cpp:
        (WebKit::PluginProcessProxy::didFinishLaunching):
            - Let the plugin process nap if all processes in all contexts are napping.
        * UIProcess/WebContext.h:
            - Remove canEnableProcessSuppressionForNetworkProcess & canEnableProcessSuppressionForWebProcess
            - canEnableProcessSuppressionForGlobalChildProcesses -> processSuppressionIsEnabledForAllContexts
            - combine updateProcessSuppressionStateOfChildProcesses & updateProcessSuppressionStateOfGlobalChildProcesses
                -> updateProcessSuppressionState
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::isProcessSuppressible):
            - WebProcess is supressible if IsVisuallyIdle.
        (WebKit::WebPageProxy::viewStateDidChange):
            - WebProcessProxy should updateProcessSuppressionState when IsVisuallyIdle changes.
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebProcessProxy.cpp:
        (WebKit::WebProcessProxy::createWebPage):
        (WebKit::WebProcessProxy::addExistingWebPage):
        (WebKit::WebProcessProxy::pageSuppressibilityChanged):
        (WebKit::WebProcessProxy::pagePreferencesChanged):
            - pageIsProcessSuppressible -> isProcessSuppressible